# motif

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Makefile  baseline.jl  baseline_test.jl  benchmark.jl  clean.awk  download.jl  motif.cc  motif.h  test.jl  weakline.py
baseline/: baseline.jl  baseline_test.jl  bin.jl
bassline/: bassline.jl  bin.jl  double-build.jl  test.jl
data/: 939genomes.txt  Makefile  download.jl  extract.sh
groove/: CMakeLists.txt  benchmark.py  main.cpp  setup.py
groove/motif/: motif.cpp  motif.h
groove/motif/src/queue/: ConcurrentQueue.h
groove/motif/src/readers/: archive_reader.cpp  archive_reader.h  file_readers.cpp  file_readers.h
jam/: .clang-format  CMakeLists.txt  Makefile  jam.cu  jam.h  main.cc
jam_lib/: CMakeLists.txt  jam_lib.cpp  setup.py
jam_lib/jam/: Analyzer.cpp  Analyzer.h  Makefile  Queue.cpp  Queue.h  jam  jam.cu  jam.h  jam.jl  jam_run.cc
motif/: BitStream.cpp  BitStream.h  CMakeLists.txt  Makefile  file_readers.cpp  file_readers.h  jam.cu  main.cc  main.cpp  motif.cpp  motif.h  setup.py
motif/jam/: jam.cu  jam.h  motif.cc  motif.h  queue.h
motif/pybind11/: CMakeLists.txt
motif/src/queue/: ConcurrentQueue.h
motif/src/readers/: file_readers.cpp  file_readers.h
python_interface/: Analyzer.py  CandidateMarkerFinder.py  DataConnector.py  DataController.py  Genome.py  Marker.py  MarkersSet.py  PresenceMatrix.py  main_test.py  run.py  test.py  test_new.py  test_results_against_groove.py  verify.py
subbass/: subbass.py  subbass_parallel.py
test/: CMakeLists.txt  main.cc  trivial.cc
tests/data/: result8000.txt  result80000.txt  result800000.txt
weakline/: bin.py
